--- a/index.html
+++ b/index.html
@@ -1,8 +1,32 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<link rel="preconnect" href="https://fonts.googleapis.com"> 
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+	<style>
+		body{
+			background:#FFC288;
+			padding-left:15%;
+			padding-right:15%;
+			font-family:"montserrat";
+		}
+		h1{
+			color:#FF6701;
+		}
+		p{
+			font-size:1.5rem;
+		}
+	</style>	
 </head>
 <body>
 	<h1>Hi, I'm Sarah. This website is under construction. *Beep boop* 🛠️🤖</h1>
+	<h1>About</h1>
+	<hr>
+	<p>Hi, I'm Sarah, a really cool Californian.</p>
+	<h1><a href="/projects/">Projects</a></h1>
+	<h1>Contact</h1>
+	<h1>Vibe Hut</h1>
 </body>
 </html>
+
