--- a/projects/index.html
+++ b/projects/index.html
@@ -1,7 +1,2 @@
-<html>
-<head>
-</head>
-<body>
-  <h1>Test</h1>
-  </body>
-</html>
+<h1>Sarah's projects!</h1>
+	<img src="/images/Russel.jpg" width="500" height="600">
