--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,6 @@
 <h1>Sarah's projects!</h1>
 <div style="border: 1rem solid; border-color: red; padding: .5em; margin: 3em; display: grid; grid-template-columns: repeat(2, 1fr);">
-	<img src="images/Russel.jpg" width="500" height="600">
+	<img src="/images/Russel.jpg" width="500" height="600">
 	<div>
 		<h2>Project name</h2>
 		<p>Some text here about the project.</p>
